chore: trim verbose Go comments
